[gd_scene load_steps=2 format=3 uid="uid://biiubxt5fr5gf"]

[ext_resource type="Script" uid="uid://ttuvasodtv0b" path="res://scripts/SlotItem.gd" id="1_xnrft"]

[node name="Button" type="Button"]
offset_right = 40.0
offset_bottom = 20.0
script = ExtResource("1_xnrft")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MetaLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
